--- a/docs/modules/troubleshooting/pages/troubleshooting.adoc
+++ b/docs/modules/troubleshooting/pages/troubleshooting.adoc
@@ -3,9 +3,8 @@ keywords: stream, jpastreamer, java, transactions, JPA, troubleshooting
 author: Julia Gustafsson
 :reftext: Troubleshooting
 :navtitle: Troubleshooting
-:toclevels:3
-:source-highlighter: highlight.js
-
+:toclevels: 3
+This section explores pitfalls that users may encounter while working with JPAStreamer and provides practical solutions to address them.
 This section explores pitfalls that users may encounter while working with JPAStreamer and provides practical solutions to address them.
 
 == Metamodel Generation
